--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
   </head>
   <body>
-    <form id="form-register" class="form" data-validate></form>
-    <form id="form-login" class="form"></form>
+    <div class="forms-container">
+      <form id="form-register" class="form" data-validate></form>
+      <form id="form-login" class="form"></form>
+    </div>
   </body>
 </html>
